--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,14 @@
 /target
 /.lein-*
 
+# project specific artifacts
+/resources/public/js/cljs
+/resources/public/js/escurel.js
+/resources/public/js/escurel
+/resources/public/js/goog
+/resources/public/js/om
+/resources/public/js/react-0.11.1.js
+
 # Heroku artifacts
 # e.g. heroku config:add JVM_OPTS=-Xms128m
 /.env
